# line_detect

./: CMakeLists.txt  README.md  package.xml
launch/: detect.launch
src/: detect_node.cpp  detect_white_node.cpp  detect_yellow_node.cpp
